# gn target for the otf browser binary (plan.md §8).
#
# Placed into the Chromium checkout as //otf/BUILD.gn by scripts/bootstrap-chromium.sh
# (which symlinks engine/ -> chromium/src/otf). Additive only: no upstream
# Chromium files are edited, so rebasing stays cheap.
#
# Build flow:
#   1. rust_bindgen turns shim/bridge.h into Rust FFI decls.
#   2. rust_static_library builds engine/backend in-tree (sharing Chromium's
#      Rust std and vendored crates) into the otf_backend rlib.
#   3. this target compiles the shim + entry point, defines OTF_WITH_CONTENT,
#      links otf_backend, and pulls in the content layer.

import("//build/config/ui.gni")
import("//build/rust/rust_bindgen.gni")
import("//build/rust/rust_static_library.gni")
import("//mojo/public/tools/bindings/mojom.gni")
import("//tools/grit/repack.gni")

# The JS<->Rust bridge transport interface (renderer <-> browser). Generates the
# C++ bindings the shim's browser/renderer clients use.
mojom("otf_mojom") {
  sources = [ "shim/otf_bridge.mojom" ]
}

# bindgen the FFI header (shim/bridge.h) into Rust `extern "C"` decls, in-tree.
# Replaces the cargo build.rs bindgen on the with-content path. The allowlist
# mirrors build.rs so the generated surface is identical (the otf_api() entry
# point + the Otf* interface tables/handles). bridge.h only pulls <stddef.h>/
# <stdint.h>, so no C `deps` are needed.
rust_bindgen("otf_bridge_bindgen") {
  header = "shim/bridge.h"
  bindgen_flags = [
    "allowlist-function=otf_.*",
    "allowlist-type=Otf.*",
  ]
}

# The Rust control brain, built in-tree so it shares Chromium's Rust std (one
# std, no bundled-copy duplicate -> no --allow-multiple-definition link hack) and
# pulls vendored crates from //third_party/rust. cargo is kept only for the
# standalone `cargo test` inner loop (engine/backend, with-content off).
#
# The `in-tree` feature switches the backend's FFI module from the cargo
# build.rs/OUT_DIR bindings to the rust_bindgen target above (see backend/src/lib.rs).
rust_static_library("otf_backend") {
  crate_root = "backend/src/lib.rs"
  edition = "2021"
  allow_unsafe = true
  sources = [
    "backend/src/backend.rs",
    "backend/src/bridge.rs",
    "backend/src/lib.rs",
  ]
  features = [
    "with-content",
    "in-tree",
  ]
  deps = [
    ":otf_bridge_bindgen",
    "//third_party/rust/serde_json/v1:lib",
  ]
}

# otf's resource pack (otf.pak), aggregating the content/blink/ui/views/net
# resource + string paks the content layer loads at runtime. Modeled on
# content/shell's repack("pak") minus its testonly/shell-only entries, so this is
# shippable (non-testonly).
repack("pak") {
  sources = [
    "$root_gen_dir/base/tracing/protos/tracing_proto_resources.pak",
    "$root_gen_dir/components/ukm_resources.pak",
    "$root_gen_dir/content/attribution_internals_resources.pak",
    "$root_gen_dir/content/browser/resources/media/media_internals_resources.pak",
    "$root_gen_dir/content/browser/tracing/tracing_resources.pak",
    "$root_gen_dir/content/browser/webrtc/resources/webrtc_internals_resources.pak",
    "$root_gen_dir/content/content_resources.pak",
    "$root_gen_dir/content/gpu_resources.pak",
    "$root_gen_dir/content/histograms_resources.pak",
    "$root_gen_dir/content/private_aggregation_internals_resources.pak",
    "$root_gen_dir/content/process_resources.pak",
    "$root_gen_dir/content/quota_internals_resources.pak",
    "$root_gen_dir/content/service_worker_resources.pak",
    "$root_gen_dir/content/traces_internals_resources.pak",
    "$root_gen_dir/content/browser/devtools/devtools_resources.pak",
    "$root_gen_dir/mojo/public/js/mojo_bindings_resources.pak",
    "$root_gen_dir/net/net_resources.pak",
    "$root_gen_dir/third_party/blink/public/resources/blink_resources.pak",
    "$root_gen_dir/third_party/blink/public/resources/blink_scaled_resources_100_percent.pak",
    "$root_gen_dir/third_party/blink/public/resources/inspector_overlay_resources.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_en-US.pak",
    "$root_gen_dir/third_party/blink/public/strings/permission_element_generated_strings.pak",
    "$root_gen_dir/third_party/blink/public/strings/permission_element_strings_en-US.pak",
    "$root_gen_dir/ui/resources/ui_lottie_resources.pak",
    "$root_gen_dir/ui/resources/ui_resources_100_percent.pak",
    "$root_gen_dir/ui/strings/app_locale_settings_en-US.pak",
    "$root_gen_dir/ui/strings/auto_image_annotation_strings_en-US.pak",
    "$root_gen_dir/ui/strings/ax_strings_en-US.pak",
    "$root_gen_dir/ui/strings/ui_strings_en-US.pak",
    "$root_gen_dir/ui/views/resources/views_resources_100_percent.pak",
    "$root_gen_dir/ui/webui/resources/webui_resources.pak",
  ]

  deps = [
    "//base/tracing/protos:chrome_track_event_resources",
    "//components/ukm/debug:resources",
    "//content:content_resources",
    "//content/browser/devtools:devtools_resources",
    "//content/browser/resources",
    "//content/browser/resources/media:resources",
    "//content/browser/tracing:resources",
    "//content/browser/webrtc/resources",
    "//mojo/public/js:resources",
    "//net:net_resources",
    "//third_party/blink/public:devtools_inspector_resources",
    "//third_party/blink/public:resources",
    "//third_party/blink/public:scaled_resources_100_percent",
    "//third_party/blink/public/strings",
    "//third_party/blink/public/strings:permission_element_generated_strings",
    "//third_party/blink/public/strings:permission_element_strings",
    "//ui/resources",
    "//ui/strings",
    "//ui/views/resources",
    "//ui/webui/resources",
  ]

  output = "$root_out_dir/otf.pak"
}

executable("otf_browser") {
  sources = [
    "shim/bridge.cc",
    "shim/bridge.h",
    "shim/otf_browser_context.cc",
    "shim/otf_browser_context.h",
    "shim/otf_browser_main_parts.cc",
    "shim/otf_browser_main_parts.h",
    "shim/otf_bridge_host.cc",
    "shim/otf_bridge_host.h",
    "shim/otf_bridge_render_frame_observer.cc",
    "shim/otf_bridge_render_frame_observer.h",
    "shim/otf_content_browser_client.cc",
    "shim/otf_content_browser_client.h",
    "shim/otf_content_client.cc",
    "shim/otf_content_client.h",
    "shim/otf_content_renderer_client.cc",
    "shim/otf_content_renderer_client.h",
    "shim/otf_main.cc",
    "shim/otf_main_delegate.cc",
    "shim/otf_main_delegate.h",
    "shim/otf_platform_window.h",
    "shim/otf_tab_host.cc",
    "shim/otf_tab_host.h",
  ]

  # The OtfPlatformWindow backend is platform-conditional: one translation unit
  # defines OtfPlatformWindow::Create/Get per OS. Desktop (Linux/Windows/CrOS)
  # uses the aura/views implementation; macOS (Cocoa) and Android (surface) get
  # their own files here as they land.
  if (use_aura) {
    sources += [ "shim/otf_window_aura.cc" ]
  }

  defines = [ "OTF_WITH_CONTENT" ]

  # otf's own embedder over the content layer — no content_shell. The content
  # public APIs (app/browser/renderer) plus the bridge clients (gin/v8/blink/mojo)
  # and the desktop toolkit (aura/views/wm/display, LinuxUi, input method).
  deps = [
    ":otf_backend",
    ":otf_mojom",
    "//base",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/renderer",
    "//gin",
    "//mojo/public/cpp/bindings",
    "//net",
    "//sandbox",
    "//third_party/blink/public:blink",
    "//ui/aura",
    "//ui/base",
    "//ui/base/ime/init",
    "//ui/display",
    "//ui/gfx/geometry",
    "//ui/views",
    "//ui/views/controls/webview",
    "//ui/wm",
    "//url",
    "//v8",
  ]

  if (is_linux) {
    deps += [ "//ui/linux:linux_ui_factory" ]
  }

  data_deps = [
    ":pak",
    "//tools/v8_context_snapshot",
  ]

  if (is_linux || is_chromeos) {
    data_deps += [ "//components/crash/core/app:chrome_crashpad_handler" ]
  }

  # The Rust backend is the in-tree rust_static_library `:otf_backend` (in deps).
  # gn tracks it as a real dependency edge and links it sharing Chromium's Rust
  # std, so the old copy/lib_dirs/inputs and --allow-multiple-definition hacks
  # are gone.

  # Build -fno-rtti like the rest of content (the default no_rtti config). The
  # shim subclasses content/content_shell polymorphic types (ShellMainDelegate,
  # RenderFrameObserver, the mojo/gin bases), which are compiled without RTTI and
  # export no typeinfo; enabling RTTI here would emit undefined typeinfo refs.
}
